[package]
name = "lcf-js"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.42"
console_error_panic_hook = "0.1.7"
lcf = "0.8.0"
serde-reflection = "0.5.0"
serde-wasm-bindgen = "0.6.5"
serde_yaml = "0.9.34"
unindent = "0.2.4"
wasm-bindgen = "0.2.104"
